# NucloFlo

./: LICENSE
application_root/: .gitignore  Cargo.toml  __init__.py  layout.txt
application_root/BIOCLICK/: Backend.js  app.py
application_root/BIOCLICK/templates/: try.html
application_root/engines/rust_engine/src/: main.rs
application_root/inputs/: job_1.fasta
application_root/outputs/: large_result_2.txt  python_blast_1.xml  rust_engine_2.txt  small_result_1.txt  small_result_3.txt
application_root/rust_engine/: Cargo.toml
application_root/rust_engine/src/: main.rs
application_root/scheduler/: Cargo.toml
application_root/scheduler/src/: main.rs
application_root/ui/: index.html  main.js  package-lock.json  package.json  preload.js
